Fix smaller images not centered

--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -120,8 +120,9 @@
     list-style: square;
   }
   & img {
+    display: block;
     max-width: min(80%, 700px);
-    margin: 0 10%;
+    margin: 0 auto;
     background: var(--bgLight);
     border-radius: 10px;
   }
